--- a/public/index.html
+++ b/public/index.html
@@ -15,18 +15,18 @@
         </div>
         <div class="col-md-6 main">
             <form action="/sign_up" method="POST">
-                <h2>Registration form</h2>
-                <input type="text" class="box" id="name" name="name" placeholder="name" required/>
+                <h2>REGISTRATION FORM</h2>
+                <input type="text" class="box" id="name" name="name" placeholder="Name" required/>
             <br>
-            <input type="text" class="box" id="age" name="age" placeholder="age" required/>
+            <input type="text" class="box" id="age" name="age" placeholder="Age" required/>
             <br>
-            <input type="text" class="box" id="email" name="email" placeholder="email" required/>
+            <input type="text" class="box" id="email" name="email" placeholder="E-mail" required/>
             <br>
-            <input type="text" class="box" id="phno" name="phno" placeholder="phno" required/>
+            <input type="text" class="box" id="phno" name="phno" placeholder="Phone-number" required/>
             <br>
-            <input type="text" class="box" id="gender" name="gender" placeholder="gender" required/>
+            <input type="text" class="box" id="gender" name="gender" placeholder="Gender" required/>
             <br>
-            <input type="text" class="box" id="password" name="password" placeholder="password" required/>
+            <input type="text" class="box" id="password" name="password" placeholder="Password" required/>
             <br>
             <input type="submit" value="submit" id="submit"/>
         </form>
